// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design.vue Load report button enabled if reports exist 1`] = `
<section>
  <div
    class="columns is-gapless"
  >
    <aside
      class="column is-one-quarter vh-scrollable"
    >
      <nav
        class="panel has-background-white"
      >
        <div
          class="panel-block"
        >
          <div
            class="field has-addons"
          >
            <div
              class="control is-expanded"
            >
              <input
                class="input"
                disabled="disabled"
                placeholder="Filter"
                type="text"
              />
            </div>
             
            <div
              class="control"
            >
              <button
                class="button"
                disabled="disabled"
              >
                <span
                  class="icon"
                >
                  <font-awesome-icon-stub
                    icon="search"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
                     panel-block-heading
                     has-background-white-bis
                     has-text-grey
                     is-expandable"
          >
            
              
            
          </a>
           
          <!---->
             
          <!---->
           
        </div>
      </nav>
    </aside>
     
    <div
      class="column is-three-quarters vh-scrollable"
    >
      <div
        class="columns is-vcentered"
      >
        <div
          class="column is-one-quarter"
        >
          <div
            class="is-grouped is-pulled-left"
          >
            <div>
              <em>
                Untitled Report
              </em>
            </div>
          </div>
        </div>
         
        <div
          class="column"
        >
          <div
            class="field is-grouped is-pulled-right"
          >
            <!---->
             
            <div
              class="control field"
            >
              <div
                class="control"
              >
                <!---->
              </div>
               
              <div
                class="control"
              >
                <div
                  class="dropdown is-right"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-save"
                      aria-haspopup="true"
                      class="button is-interactive-primary is-outlined"
                      disabled="disabled"
                    >
                      <span>
                        Save
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-save"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="dropdown-item"
                      >
                        <div
                          class="field"
                        >
                          <!---->
                           
                          <div
                            class="control"
                          >
                            <input
                              class="input"
                              placeholder="Name your report"
                              type="text"
                            />
                          </div>
                        </div>
                         
                        <div
                          class="field is-grouped"
                        >
                          <div
                            class="control"
                          >
                            <button
                              class="button is-interactive-primary"
                              disabled="disabled"
                            >
                              Save
                            </button>
                          </div>
                           
                          <div
                            class="control"
                          >
                            <button
                              class="button is-text"
                            >
                              
                            Cancel
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="control field"
            >
              <div
                class="dropdown is-right"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-load"
                    aria-haspopup="true"
                    class="button is-interactive-primary is-outlined"
                  >
                    <span>
                      Load
                    </span>
                     
                    <span
                      class="icon is-small"
                    >
                      <font-awesome-icon-stub
                        icon="caret-down"
                      />
                    </span>
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-load"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  >
                    <a
                      class="dropdown-item"
                    >
                      
                    Report 1 Test
                  
                    </a>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-success"
                  disabled="disabled"
                >
                  Run Query
                </button>
              </div>
               
              <div
                class="control"
              >
                <div
                  class="select is-fullwidth"
                >
                  <select
                    name="connection"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable is-collapsed"
      >
        <span
          class="accordion-title"
        >
          Charts
        </span>
         
        <div>
          <div
            class="field has-addons chart-buttons"
          >
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white is-active"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-down"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <!---->
      </div>
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable"
      >
        <span>
          Data
        </span>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-up"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <div
          class="box is-radiusless is-shadowless"
        >
          <!---->
           
          <div
            class="columns is-vcentered"
          >
            <div
              class="column"
            >
              <div
                class="tabs"
              >
                <ul>
                  <li
                    class=""
                  >
                    <a>
                      Results (0)
                    </a>
                  </li>
                   
                  <li
                    class="is-active"
                  >
                    <a>
                      SQL
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="column"
            >
              <div
                class="field is-horizontal is-marginless is-pulled-right"
              >
                <div
                  class="field-label"
                >
                  <label
                    class="label"
                  >
                    Limit
                  </label>
                </div>
                 
                <div
                  class="field-body"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control"
                    >
                      <input
                        class="input is-small"
                        placeholder="Limit"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div>
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</section>
`;

exports[`Design.vue Run Query button enabled and SQL tab focused and displayed if selection(s) are made 1`] = `
<section>
  <div
    class="columns is-gapless"
  >
    <aside
      class="column is-one-quarter vh-scrollable"
    >
      <nav
        class="panel has-background-white"
      >
        <div
          class="panel-block"
        >
          <div
            class="field has-addons"
          >
            <div
              class="control is-expanded"
            >
              <input
                class="input"
                disabled="disabled"
                placeholder="Filter"
                type="text"
              />
            </div>
             
            <div
              class="control"
            >
              <button
                class="button"
                disabled="disabled"
              >
                <span
                  class="icon"
                >
                  <font-awesome-icon-stub
                    icon="search"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
                     panel-block-heading
                     has-background-white-bis
                     has-text-grey
                     is-expandable"
          >
            
              
            
          </a>
           
          <!---->
             
          <!---->
           
        </div>
      </nav>
    </aside>
     
    <div
      class="column is-three-quarters vh-scrollable"
    >
      <div
        class="columns is-vcentered"
      >
        <div
          class="column is-one-quarter"
        >
          <div
            class="is-grouped is-pulled-left"
          >
            <div>
              <em>
                Untitled Report
              </em>
            </div>
          </div>
        </div>
         
        <div
          class="column"
        >
          <div
            class="field is-grouped is-pulled-right"
          >
            <!---->
             
            <div
              class="control field"
            >
              <div
                class="control"
              >
                <!---->
              </div>
               
              <div
                class="control"
              >
                <div
                  class="dropdown is-right"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-save"
                      aria-haspopup="true"
                      class="button is-interactive-primary is-outlined"
                      disabled="disabled"
                    >
                      <span>
                        Save
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-save"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="dropdown-item"
                      >
                        <div
                          class="field"
                        >
                          <!---->
                           
                          <div
                            class="control"
                          >
                            <input
                              class="input"
                              placeholder="Name your report"
                              type="text"
                            />
                          </div>
                        </div>
                         
                        <div
                          class="field is-grouped"
                        >
                          <div
                            class="control"
                          >
                            <button
                              class="button is-interactive-primary"
                              disabled="disabled"
                            >
                              Save
                            </button>
                          </div>
                           
                          <div
                            class="control"
                          >
                            <button
                              class="button is-text"
                            >
                              
                            Cancel
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="control field"
            >
              <div
                class="dropdown is-right"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-load"
                    aria-haspopup="true"
                    class="button is-interactive-primary is-outlined"
                    disabled="disabled"
                  >
                    <span>
                      Load
                    </span>
                     
                    <span
                      class="icon is-small"
                    >
                      <font-awesome-icon-stub
                        icon="caret-down"
                      />
                    </span>
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-load"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  />
                </div>
              </div>
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-success"
                >
                  Run Query
                </button>
              </div>
               
              <div
                class="control"
              >
                <div
                  class="select is-fullwidth"
                >
                  <select
                    name="connection"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable is-collapsed"
      >
        <span
          class="accordion-title"
        >
          Charts
        </span>
         
        <div>
          <div
            class="field has-addons chart-buttons"
          >
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white is-active"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-down"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <!---->
      </div>
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable"
      >
        <span>
          Data
        </span>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-up"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <div
          class="box is-radiusless is-shadowless"
        >
          <!---->
           
          <div
            class="columns is-vcentered"
          >
            <div
              class="column"
            >
              <div
                class="tabs"
              >
                <ul>
                  <li
                    class=""
                  >
                    <a>
                      Results (0)
                    </a>
                  </li>
                   
                  <li
                    class="is-active"
                  >
                    <a>
                      SQL
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="column"
            >
              <div
                class="field is-horizontal is-marginless is-pulled-right"
              >
                <div
                  class="field-label"
                >
                  <label
                    class="label"
                  >
                    Limit
                  </label>
                </div>
                 
                <div
                  class="field-body"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control"
                    >
                      <input
                        class="input is-small"
                        placeholder="Limit"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div>
            <div>
              <code>
                
              </code>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</section>
`;

exports[`Design.vue Save report button enabled if query has ran 1`] = `
<section>
  <div
    class="columns is-gapless"
  >
    <aside
      class="column is-one-quarter vh-scrollable"
    >
      <nav
        class="panel has-background-white"
      >
        <div
          class="panel-block"
        >
          <div
            class="field has-addons"
          >
            <div
              class="control is-expanded"
            >
              <input
                class="input"
                disabled="disabled"
                placeholder="Filter"
                type="text"
              />
            </div>
             
            <div
              class="control"
            >
              <button
                class="button"
                disabled="disabled"
              >
                <span
                  class="icon"
                >
                  <font-awesome-icon-stub
                    icon="search"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
                     panel-block-heading
                     has-background-white-bis
                     has-text-grey
                     is-expandable"
          >
            
              
            
          </a>
           
          <!---->
             
          <!---->
           
        </div>
      </nav>
    </aside>
     
    <div
      class="column is-three-quarters vh-scrollable"
    >
      <div
        class="columns is-vcentered"
      >
        <div
          class="column is-one-quarter"
        >
          <div
            class="is-grouped is-pulled-left"
          >
            <div>
              <em>
                Untitled Report
              </em>
            </div>
          </div>
        </div>
         
        <div
          class="column"
        >
          <div
            class="field is-grouped is-pulled-right"
          >
            <!---->
             
            <div
              class="control field"
            >
              <div
                class="control"
              >
                <!---->
              </div>
               
              <div
                class="control"
              >
                <div
                  class="dropdown is-right"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-save"
                      aria-haspopup="true"
                      class="button is-interactive-primary is-outlined"
                      disabled="disabled"
                    >
                      <span>
                        Save
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-save"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="dropdown-item"
                      >
                        <div
                          class="field"
                        >
                          <!---->
                           
                          <div
                            class="control"
                          >
                            <input
                              class="input"
                              placeholder="Name your report"
                              type="text"
                            />
                          </div>
                        </div>
                         
                        <div
                          class="field is-grouped"
                        >
                          <div
                            class="control"
                          >
                            <button
                              class="button is-interactive-primary"
                              disabled="disabled"
                            >
                              Save
                            </button>
                          </div>
                           
                          <div
                            class="control"
                          >
                            <button
                              class="button is-text"
                            >
                              
                            Cancel
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="control field"
            >
              <div
                class="dropdown is-right"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-load"
                    aria-haspopup="true"
                    class="button is-interactive-primary is-outlined"
                    disabled="disabled"
                  >
                    <span>
                      Load
                    </span>
                     
                    <span
                      class="icon is-small"
                    >
                      <font-awesome-icon-stub
                        icon="caret-down"
                      />
                    </span>
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-load"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  />
                </div>
              </div>
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-success"
                >
                  Run Query
                </button>
              </div>
               
              <div
                class="control"
              >
                <div
                  class="select is-fullwidth"
                >
                  <select
                    name="connection"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable is-collapsed"
      >
        <span
          class="accordion-title"
        >
          Charts
        </span>
         
        <div>
          <div
            class="field has-addons chart-buttons"
          >
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white is-active"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-down"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <!---->
      </div>
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable"
      >
        <span>
          Data
        </span>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-up"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <div
          class="box is-radiusless is-shadowless"
        >
          <!---->
           
          <div
            class="columns is-vcentered"
          >
            <div
              class="column"
            >
              <div
                class="tabs"
              >
                <ul>
                  <li
                    class=""
                  >
                    <a>
                      Results (0)
                    </a>
                  </li>
                   
                  <li
                    class="is-active"
                  >
                    <a>
                      SQL
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="column"
            >
              <div
                class="field is-horizontal is-marginless is-pulled-right"
              >
                <div
                  class="field-label"
                >
                  <label
                    class="label"
                  >
                    Limit
                  </label>
                </div>
                 
                <div
                  class="field-body"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control"
                    >
                      <input
                        class="input is-small"
                        placeholder="Limit"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div>
            <div>
              <code>
                
              </code>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</section>
`;

exports[`Design.vue a loaded report renders report name, selections, chart, SQL, and results where the Save, Load, and Run Query buttons are enabled 1`] = `
<section>
  <div
    class="columns is-gapless"
  >
    <aside
      class="column is-one-quarter vh-scrollable"
    >
      <nav
        class="panel has-background-white"
      >
        <div
          class="panel-block"
        >
          <div
            class="field has-addons"
          >
            <div
              class="control is-expanded"
            >
              <input
                class="input"
                disabled="disabled"
                placeholder="Filter"
                type="text"
              />
            </div>
             
            <div
              class="control"
            >
              <button
                class="button"
                disabled="disabled"
              >
                <span
                  class="icon"
                >
                  <font-awesome-icon-stub
                    icon="search"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
                     panel-block-heading
                     has-background-white-bis
                     has-text-grey
                     is-expandable"
          >
            
              
            
          </a>
           
          <!---->
             
          <!---->
           
        </div>
      </nav>
    </aside>
     
    <div
      class="column is-three-quarters vh-scrollable"
    >
      <div
        class="columns is-vcentered"
      >
        <div
          class="column is-one-quarter"
        >
          <div
            class="is-grouped is-pulled-left"
          >
            <div>
              Report 1 Test
            </div>
          </div>
        </div>
         
        <div
          class="column"
        >
          <div
            class="field is-grouped is-pulled-right"
          >
            <div
              class="control"
            >
              <dropdown-stub
                isrightaligned="true"
                label="Add to Dashboard"
              />
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-interactive-primary is-outlined"
                >
                  <span>
                    Save
                  </span>
                </button>
              </div>
               
              <div
                class="control"
              >
                <dropdown-stub
                  buttonclasses="is-interactive-primary is-outlined"
                  disabled="true"
                  isrightaligned="true"
                  label=""
                />
              </div>
            </div>
             
            <div
              class="control field"
            >
              <dropdown-stub
                buttonclasses="is-interactive-primary is-outlined"
                isrightaligned="true"
                label="Load"
              />
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-success"
                >
                  Run Query
                </button>
              </div>
               
              <div
                class="control"
              >
                <div
                  class="select is-fullwidth"
                >
                  <select
                    name="connection"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable is-collapsed"
      >
        <span
          class="accordion-title"
        >
          Charts
        </span>
         
        <div>
          <div
            class="field has-addons chart-buttons"
          >
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white is-active"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-down"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <!---->
      </div>
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable"
      >
        <span>
          Data
        </span>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-up"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <div
          class="box is-radiusless is-shadowless"
        >
          <!---->
           
          <div
            class="columns is-vcentered"
          >
            <div
              class="column"
            >
              <div
                class="tabs"
              >
                <ul>
                  <li
                    class=""
                  >
                    <a>
                      Results (0)
                    </a>
                  </li>
                   
                  <li
                    class="is-active"
                  >
                    <a>
                      SQL
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="column"
            >
              <div
                class="field is-horizontal is-marginless is-pulled-right"
              >
                <div
                  class="field-label"
                >
                  <label
                    class="label"
                  >
                    Limit
                  </label>
                </div>
                 
                <div
                  class="field-body"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control"
                    >
                      <input
                        class="input is-small"
                        placeholder="Limit"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <resulttable-stub />
           
          <div>
            <div>
              <code>
                
              </code>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</section>
`;

exports[`Design.vue no selections, chart, SQL, or results where the Save, Load, and Run Query buttons are disabled by default 1`] = `
<section>
  <div
    class="columns is-gapless"
  >
    <aside
      class="column is-one-quarter vh-scrollable"
    >
      <nav
        class="panel has-background-white"
      >
        <div
          class="panel-block"
        >
          <div
            class="field has-addons"
          >
            <div
              class="control is-expanded"
            >
              <input
                class="input"
                disabled="disabled"
                placeholder="Filter"
                type="text"
              />
            </div>
             
            <div
              class="control"
            >
              <button
                class="button"
                disabled="disabled"
              >
                <span
                  class="icon"
                >
                  <font-awesome-icon-stub
                    icon="search"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="is-unselectable"
        >
          <!---->
           
          <a
            class="panel-block
                     panel-block-heading
                     has-background-white-bis
                     has-text-grey
                     is-expandable"
          >
            
              
            
          </a>
           
          <!---->
             
          <!---->
           
        </div>
      </nav>
    </aside>
     
    <div
      class="column is-three-quarters vh-scrollable"
    >
      <div
        class="columns is-vcentered"
      >
        <div
          class="column is-one-quarter"
        >
          <div
            class="is-grouped is-pulled-left"
          >
            <div>
              <em>
                Untitled Report
              </em>
            </div>
          </div>
        </div>
         
        <div
          class="column"
        >
          <div
            class="field is-grouped is-pulled-right"
          >
            <!---->
             
            <div
              class="control field"
            >
              <div
                class="control"
              >
                <!---->
              </div>
               
              <div
                class="control"
              >
                <div
                  class="dropdown is-right"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-save"
                      aria-haspopup="true"
                      class="button is-interactive-primary is-outlined"
                      disabled="disabled"
                    >
                      <span>
                        Save
                      </span>
                       
                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>
                   
                  <div
                    class="dropdown-menu"
                    id="dropdown-save"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="dropdown-item"
                      >
                        <div
                          class="field"
                        >
                          <!---->
                           
                          <div
                            class="control"
                          >
                            <input
                              class="input"
                              placeholder="Name your report"
                              type="text"
                            />
                          </div>
                        </div>
                         
                        <div
                          class="field is-grouped"
                        >
                          <div
                            class="control"
                          >
                            <button
                              class="button is-interactive-primary"
                              disabled="disabled"
                            >
                              Save
                            </button>
                          </div>
                           
                          <div
                            class="control"
                          >
                            <button
                              class="button is-text"
                            >
                              
                            Cancel
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
             
            <div
              class="control field"
            >
              <div
                class="dropdown is-right"
              >
                <div
                  class="dropdown-trigger"
                >
                  <button
                    aria-controls="dropdown-load"
                    aria-haspopup="true"
                    class="button is-interactive-primary is-outlined"
                    disabled="disabled"
                  >
                    <span>
                      Load
                    </span>
                     
                    <span
                      class="icon is-small"
                    >
                      <font-awesome-icon-stub
                        icon="caret-down"
                      />
                    </span>
                  </button>
                </div>
                 
                <div
                  class="dropdown-menu"
                  id="dropdown-load"
                  role="menu"
                >
                  <div
                    class="dropdown-content"
                  />
                </div>
              </div>
            </div>
             
            <div
              class="control field has-addons"
            >
              <div
                class="control"
              >
                <button
                  class="button is-success"
                  disabled="disabled"
                >
                  Run Query
                </button>
              </div>
               
              <div
                class="control"
              >
                <div
                  class="select is-fullwidth"
                >
                  <select
                    name="connection"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
       
      <!---->
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable is-collapsed"
      >
        <span
          class="accordion-title"
        >
          Charts
        </span>
         
        <div>
          <div
            class="field has-addons chart-buttons"
          >
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white is-active"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>
            </div>
             
            <div
              class="control"
            >
              <button
                class="button is-small is-text has-text-white"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-down"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <!---->
      </div>
       
      <div
        class="has-background-primary
                  accordion-header
                  has-text-white-bis
                  is-expandable"
      >
        <span>
          Data
        </span>
         
        <div
          class="accordion-toggle"
        >
          <a
            class="button is-primary is-small"
          >
            <span
              class="icon is-small"
            >
              <font-awesome-icon-stub
                icon="angle-up"
              />
            </span>
          </a>
        </div>
      </div>
       
      <div
        class="accordion-body"
      >
        <div
          class="box is-radiusless is-shadowless"
        >
          <!---->
           
          <div
            class="columns is-vcentered"
          >
            <div
              class="column"
            >
              <div
                class="tabs"
              >
                <ul>
                  <li
                    class=""
                  >
                    <a>
                      Results (0)
                    </a>
                  </li>
                   
                  <li
                    class="is-active"
                  >
                    <a>
                      SQL
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="column"
            >
              <div
                class="field is-horizontal is-marginless is-pulled-right"
              >
                <div
                  class="field-label"
                >
                  <label
                    class="label"
                  >
                    Limit
                  </label>
                </div>
                 
                <div
                  class="field-body"
                >
                  <div
                    class="field"
                  >
                    <div
                      class="control"
                    >
                      <input
                        class="input is-small"
                        placeholder="Limit"
                        type="text"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
           
          <!---->
           
          <div>
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</section>
`;
